Beat Detection is working

--- a/LiveBeat/LiveBeat.vcxproj.filters
+++ b/LiveBeat/LiveBeat.vcxproj.filters
@@ -18,5 +18,22 @@
     <ClCompile Include="LiveBeat.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\Libraries\BTrack\src\OnsetDetectionFunction.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\Libraries\BTrack\src\BTrack.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\..\Libraries\BTrack\src\CircularBuffer.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\Libraries\BTrack\src\OnsetDetectionFunction.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\Libraries\BTrack\src\BTrack.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
